# fish_simulator

./: .gitignore  .pylintrc  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
examples/: demo.ipynb
fish_simulator/: VERSION  __init__.py  image_loader.py  image_loading.py  simulator.py  tail_transformation.py  utils.py
src/: __init__.py
src/fish_simulator/: image_loading.py  simulator.py
src/zf_animator_tsm/: image_loading.py  simulator.py  tail_transformation.py
test/: test_methods.py
test/fixtures/: swim01.npy  swim02.npy
