[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fish_simulator"
version = "0.0.5"
authors = [
  { name="Thomas Soares Mullen", email="thomas.mullen@fchampalimaud.org" },
]
description = "Simulate zebrafish swim from tail angle tracking data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ThomasMullen/fish_simulator"
"Bug Tracker" = "https://github.com/ThomasMullen/fish_simulator/issues"

[tool.setuptools_scm]